--- a/main.ipynb
+++ b/main.ipynb
@@ -49,11 +49,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting Pitch Contour using AMDF\n",
+    "Next, we'll extract the pitch contour using the Average Magnitude Difference Function (AMDF). The AMDF is a simple, efficient method of pitch detection, which works particularly well for high-quality, low-noise audio signals."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Step 2: Implementing pitch detection methods\n",
+    "\n",
+    "# We'll start with the AMDF method\n",
+    "def compute_amdf(signal, frame_size):\n",
+    "    # Initialize the array to hold the AMDF values\n",
+    "    amdf_values = np.zeros(frame_size)\n",
+    "\n",
+    "    # Loop over each possible lag (up to frame size)\n",
+    "    for lag in range(frame_size):\n",
+    "        # Calculate the AMDF for this lag\n",
+    "        amdf_values[lag] = np.mean(np.abs(signal[:-lag or None] - signal[lag:]))\n",
+    "\n",
+    "    return amdf_values\n",
+    "\n",
+    "# Apply the AMDF method to a frame of the Persian voice signal\n",
+    "frame_size = 2048  # Choose an appropriate frame size based on your signal\n",
+    "frame_fa = signal_fa[:frame_size]\n",
+    "amdf_values_fa = compute_amdf(frame_fa, frame_size)\n",
+    "\n",
+    "# Plot the results\n",
+    "plt.figure()\n",
+    "plt.plot(amdf_values_fa)\n",
+    "plt.title('AMDF Pitch Contour - Persian Voice')\n",
+    "plt.xlabel('Lag')\n",
+    "plt.ylabel('AMDF')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
