--- a/main.ipynb
+++ b/main.ipynb
@@ -91,10 +91,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting Pitch Contour using Autocorrelation\n",
+    "Next, we'll extract the pitch contour using the Autocorrelation method. Autocorrelation is a mathematical tool for finding repeating patterns, such as the presence of a periodic signal obscured by noise, or identifying the missing fundamental frequency in a signal implied by its harmonic frequencies.\n",
+    "\n",
+    "The Autocorrelation method is a widely used approach for pitch detection. The basic idea is to compute the correlation of the signal with a delayed version of itself. The delay which maximizes this correlation corresponds to the period of the pitch, and thus the pitch can be calculated as the inverse of this period.\n",
+    "\n",
+    "The code for the Autocorrelation method is very similar to the AMDF method. The main difference is the computation inside the loop: instead of computing the mean difference, we compute the correlation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def compute_autocorrelation(signal, frame_size):\n",
+    "    # Initialize the array to hold the autocorrelation values\n",
+    "    autocorr_values = np.zeros(frame_size)\n",
+    "\n",
+    "    # Loop over each possible lag (up to frame size)\n",
+    "    for lag in range(frame_size):\n",
+    "        # Calculate the autocorrelation for this lag\n",
+    "        autocorr_values[lag] = np.correlate(signal[:-lag or None], signal[lag:])\n",
+    "\n",
+    "    return autocorr_values\n",
+    "\n",
+    "# Apply the Autocorrelation method to a frame of the Persian voice signal\n",
+    "frame_fa = signal_fa[:frame_size]\n",
+    "autocorr_values_fa = compute_autocorrelation(frame_fa, frame_size)\n",
+    "\n",
+    "# Plot the results\n",
+    "plt.figure()\n",
+    "plt.plot(autocorr_values_fa)\n",
+    "plt.title('Autocorrelation Pitch Contour - Persian Voice')\n",
+    "plt.xlabel('Lag')\n",
+    "plt.ylabel('Autocorrelation')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting Pitch Contour using Cepstrum\n",
+    "The Cepstrum method is a more complex approach.\n",
+    "\n",
+    "1. Compute the Fourier Transform of the signal.\n",
+    "2. Take the logarithm of the magnitude of the Fourier Transform. This process is equivalent to converting the spectrum from a power scale to a decibel scale.\n",
+    "3. Compute the inverse Fourier Transform of the result from step 2. The result of this step is called the cepstrum.\n",
+    "4. The pitch can be found as the delay (in samples) corresponding to the peak in the cepstrum.\n",
+    "\n",
+    "In the code above, the `np.fft.fft` function is used to compute the Fourier Transform, `np.log1p` is used to compute the logarithm of the magnitude spectrum (the `1p` in `log1p` stands for \"plus 1\", which helps avoid taking the logarithm of zero), and `np.fft.ifft` is used to compute the inverse Fourier Transform.\n",
+    "\n",
+    "The Cepstrum method should give us another perspective on the pitch contour of the signals. After we've computed the pitch contours for both signals using all three methods, we can start analyzing the results and comparing the methods. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_cepstrum(signal, frame_size):\n",
+    "    # Compute the Fourier Transform of the signal\n",
+    "    spectrum = np.fft.fft(signal, n=frame_size)\n",
+    "\n",
+    "    # Compute the log magnitude of the spectrum\n",
+    "    log_magnitude_spectrum = np.log1p(np.abs(spectrum))\n",
+    "\n",
+    "    # Compute the inverse Fourier Transform of the log magnitude spectrum\n",
+    "    cepstrum = np.fft.ifft(log_magnitude_spectrum)\n",
+    "\n",
+    "    return np.abs(cepstrum)\n",
+    "\n",
+    "# Apply the Cepstrum method to a frame of the Persian voice signal\n",
+    "frame_fa = signal_fa[:frame_size]\n",
+    "cepstrum_values_fa = compute_cepstrum(frame_fa, frame_size)\n",
+    "\n",
+    "# Plot the results\n",
+    "plt.figure()\n",
+    "plt.plot(cepstrum_values_fa)\n",
+    "plt.title('Cepstrum Pitch Contour - Persian Voice')\n",
+    "plt.xlabel('Quefrency')\n",
+    "plt.ylabel('Cepstrum')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
