--- a/main.ipynb
+++ b/main.ipynb
@@ -183,7 +183,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Analysis\n",
+    "\n",
+    "Looking at the pitch contours, we can observe several interesting patterns:\n",
+    "\n",
+    "### Method Comparison\n",
+    "\n",
+    "- The AMDF and Autocorrelation methods provide similar pitch contours, as both methods are based on the principle of comparing the signal to a delayed version of itself. \n",
+    "- The Cepstrum method, however, provides a different perspective on the pitch contour. This is because it operates in the cepstral domain, which provides a measure of the rate of change in different frequency components of the signal. \n",
+    "\n",
+    "### Language Comparison\n",
+    "\n",
+    "- The English and Persian voices show different pitch contour patterns. This is likely due to differences in the phonetic and prosodic properties of the two languages. For example, Persian has a different set of phonemes compared to English, which may result in different pitch patterns. \n",
+    "\n",
+    "### Understanding the Results\n",
+    "\n",
+    "- The pitch contours show that the speaker's pitch varies over time, indicating changes in prosody (the rhythm and intonation of speech). This variation is a key aspect of natural speech and can convey additional information beyond the words themselves, such as the speaker's emotional state or emphasis on certain words. "
+   ]
   }
  ],
  "metadata": {
